configs for deploy